--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,7 +17,7 @@
       </div>
       <div class="footer_copy col-md-4">
         <p>copyrights © 2017 | Lausanne2020</p>
-        <p>Build with ❤ by HEIG-VD</p>
+        <p>Built with ❤ by HEIG-VD</p>
       </div>
       <div class="footer_nav col-md-4">
         <ul class="list-unstyled">
