--- a/_layouts/news-archives.html
+++ b/_layouts/news-archives.html
@@ -20,21 +20,21 @@ layout: default
 					  {% capture dir %}{% unless site.lang == "en" %}{{site.lang}}/{% endunless %}news{% endcapture %} 
             {% capture link %}{{new.titreEn}}{% endcapture %} 
 	        <div class="come-in-module col-sm-6 col-md-4">
-						<a href="/{{ link | datapage_url: dir | split:'.html' | first }}">
-						<div class="new col-md-12">
-	            <div class="wrap_media">
-	              <img class="grow" src="{{ new.image.url }}?w=400&h=400&q=70">
-	            </div>
-	             <h1 class="h1_news">
-										{% if site.lang == "fr" %} {{ new.titre }} {% elsif site.lang == "de" %} {{ new.titreDe }} {% else %} {{ new.titreEn }} {%
-										endif %}
-								</h1>
-								<p class="p_news">
-										{% if site.lang == "fr" %} {{ new.texte | markdownify | newline_to_br | remove: '<p>' | remove: '</p>'}} 
-										{% elsif site.lang == "de" %} {{ new.texteDe | markdownify | newline_to_br | remove: '<p>' | remove: '</p>'}} 
-										{% else %} {{ new.texteEn | markdownify | newline_to_br | remove: '<p>' | remove: '</p>'}} {% endif %}
-								</p>
-						</div>
+						<a class="wrap_a" href="/{{ link | datapage_url: dir | split:'.html' | first }}">
+							<div class="new col-md-12">
+								<div class="wrap_media">
+									<img class="grow" src="{{ new.image.url }}?w=400&h=400&q=70">
+								</div>
+								<h1 class="h1_news">
+											{% if site.lang == "fr" %} {{ new.titre }} {% elsif site.lang == "de" %} {{ new.titreDe }} {% else %} {{ new.titreEn }} {%
+											endif %}
+									</h1>
+									<p class="p_news">
+											{% if site.lang == "fr" %} {{ new.texte | markdownify | newline_to_br | remove: '<p>' | remove: '</p>'}} 
+											{% elsif site.lang == "de" %} {{ new.texteDe | markdownify | newline_to_br | remove: '<p>' | remove: '</p>'}} 
+											{% else %} {{ new.texteEn | markdownify | newline_to_br | remove: '<p>' | remove: '</p>'}} {% endif %}
+									</p>
+							</div>
 						</a>
 	          <div class="new_meta">
 								<p class="news_date">
