Update ruby, imrove logos partners quality, fix nav-slider on folderpath like news

--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -140,7 +140,7 @@ html .hero {
         display: inline-block;
         vertical-align: middle;
         margin: 0 34px 30px;
-        min-width: 140px;
+        width: 140px;
         @media (max-width: 479px) {
             margin: 0 10px 30px;
         }
