--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -41,7 +41,8 @@
               {% for link in nav %}
 
                 {% capture currentpage %}{{ site.baseurl }}{{ page.url | split:'.html' | first }}{% endcapture %}
-                {% if currentpage == link.path %}
+                {% capture folderpath %}{{ link.path }}/{% endcapture %}
+                {% if currentpage == link.path or currentpage == folderpath %}
                   <a class="nav_link w--current" href="{{link.path}}">
                 {% else %}
                   <a class="nav_link" href="{{link.path}}">
