Fix p_news to justify on single news

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -230,7 +230,7 @@ ol {
     .h1_newsletter_cta,
     .marchandising_col_1,
     .h1_news,
-    .p_news {
+    .news-page .p_news, .news_section .p_news {
         text-align: center;
     }
     .marchandising_col_1 {
