Try to fix newsletter and color link map

--- a/_sass/pages/_venues.scss
+++ b/_sass/pages/_venues.scss
@@ -144,6 +144,9 @@ html .hero-discover {
 #map {
     height: 400px;
     color: $gray-text;
+    a{
+        color: $gray-text;
+    }
 }
 
 .gm-style {
