Optimize logo sizes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,8 +12,7 @@
   <div class="container">
     <div class="row flex vcenter">
       <div class="footer_logo col-md-4">
-        <img sizes="(max-width: 479px) 92vw, (max-width: 767px) 307px, (max-width: 991px) 31vw, 307px" src="/images/layout/l2020_white.png"
-          srcset="/images/layout/l2020_white-p-500x165.png 500w, /images/layout/l2020_white.png 637w" width="307">
+        <img src="/images/layout/l2020_white_320.png" width="307">
       </div>
       <div class="footer_copy col-md-4">
         <p>copyrights © 2017 | Lausanne2020</p>
