--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -26,7 +26,7 @@
         </div>
       </div>
         <a class="nav-brand" href="{{nav[0].path}}">
-          <img class="logo" sizes="(max-width: 479px) 79vw, 235px" src="/images/layout/logo-LS2020-YOG-DNA.png" srcset="/images/layout/logo-LS2020-YOG-DNA-p-500x150.png 500w, /images/layout/logo-LS2020-YOG-DNA.png 600w" width="235">
+          <img class="logo" src="/images/layout/logo-LS2020-YOG-DNA_235.png" width="235" />
         </a>
 
         <div class="navbar-header">
