heig-vd link target attribute set to _blank

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,7 +16,7 @@
       </div>
       <div class="footer_copy col-md-4">
         <p>copyrights © 2017 | Lausanne2020</p>
-        <p>Built with ❤ by <a href="http://blog.comem.ch/2017/05/04/les-jeux-olympiques-du-code/">HEIG-VD</a></p>
+        <p>Built with ❤ by <a target="_blank" rel="noopener noreferrer" href="http://blog.comem.ch/2017/05/04/les-jeux-olympiques-du-code/">HEIG-VD</a></p>
       </div>
       <div class="footer_nav col-md-4">
         <ul class="list-unstyled">
