--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -160,6 +160,15 @@ ol {
     color: $purple-primary !important;
 }
 
+input[type=submit]{
+    transition:all 2s ease-out;
+}
+
+.submitted {
+    background-color: $gray-light;
+    color: $gray-text;
+}
+
 
 /* --- Sections --- */
 
