--- a/_includes/end-scripts.html
+++ b/_includes/end-scripts.html
@@ -1,3 +1,16 @@
+  <!-- Google Analytics -->
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-92543526-1', 'auto');
+  ga('create', 'UA-93825370-1', 'auto', 'clientTracker');
+  ga('send', 'pageview');
+  ga('clientTracker.send', 'pageview');
+  </script>
+  <!-- End Google Analytics -->
 <link rel="stylesheet" href="{{ "/css/style-bottom.css" | prepend: site.baseurl_root }}">
 <script src="{{site.url}}/js/vendors/jquery-3.2.0.min.js"></script>
 <script src="{{site.url}}/js/vendors/polyfill/modernizr.js"></script>
