--- a/_sass/components/_social_wall.scss
+++ b/_sass/components/_social_wall.scss
@@ -3,7 +3,8 @@
    =========================================== */
 
 .icon-twitter,
-.icon-facebook {
+.icon-facebook,
+.icon-instagram {
     color: $gray-text;
 }
 
@@ -49,19 +50,21 @@
         }
         >video.fullscreen {
             object-fit: contain;
+            width: 100%; // Important for chrome
+            height: 100%; // Important for chrome
             font-family: 'object-fit: contain;'
         }
         /* Social_wall Blockquote */
         blockquote {
-            overflow:hidden;
+            overflow: hidden;
             padding: 20px 20px 0 20px;
             height: 200px;
             position: absolute;
             background: #FAFAFA;
             opacity: .1;
             top: 0;
-            bottom:0;
-            margin:0;
+            bottom: 0;
+            margin: 0;
             margin-right: 15px;
             border: 0;
             &:hover {
@@ -82,10 +85,10 @@
             }
             p.desc {
                 font-size: 12px;
-                margin:0;
-                padding:0;
+                margin: 0;
+                padding: 0;
                 color: $gray-text;
-                text-align:left;
+                text-align: left;
                 a {
                     color: $gray-text;
                 }
@@ -101,14 +104,12 @@
                 overflow: hidden;
             }
         }
-    }
-    // Quote without media
+    } // Quote without media
     .no_media .wrap_media blockquote {
         opacity: 0.9;
         height: 200px;
         top: 15px;
-    }
-    // Status
+    } // Status
     .user_info {
         padding: 10px 20px 0 20px;
         margin-right: 0;
@@ -175,7 +176,7 @@
         margin: 0;
         position: relative;
         background: #fff;
-        padding:0 20px 20px 20px;
+        padding: 0 20px 10px 20px;
         a {
             padding: 2px;
         }
