Fix merge issue on nav

--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -58,17 +58,17 @@
 
               <div class="nav_lang">
               {% if site.lang == "en" %}
-                <a href="{{ url_site_fr }}" class="nav_link">fr</a>
-                <a href="{{ url_site_en }}" class="nav_link accent">en</a>
-                <a href="{{ url_site_de }}" class="nav_link">de</a>
+                <a href="{{ url_site_fr }}" data-language="fr" class="language nav_link">fr</a>
+                <a href="{{ url_site_en }}" data-language="en" class="language nav_link accent">en</a>
+                <a href="{{ url_site_de }}" data-language="de" class="language nav_link">de</a>
               {% elsif site.lang == "fr" %}
-                <a href="{{ url_site_fr }}" class="nav_link accent">fr</a>
-                <a href="{{ url_site_en }}" class="nav_link">en</a>
-                <a href="{{ url_site_de }}" class="nav_link">de</a>
+                <a href="{{ url_site_fr }}" data-language="fr" class="language nav_link accent">fr</a>
+                <a href="{{ url_site_en }}" data-language="en" class="language nav_link">en</a>
+                <a href="{{ url_site_de }}" data-language="de" class="language nav_link">de</a>
               {% elsif site.lang == "de" %}
-                <a href="{{ url_site_fr }}" class="nav_link">fr</a>
-                <a href="{{ url_site_en }}" class="nav_link">en</a>
-                <a href="{{ url_site_de }}" class="nav_link accent">de</a>
+                <a href="{{ url_site_fr }}" data-language="fr" class="language nav_link">fr</a>
+                <a href="{{ url_site_en }}" data-language="en" class="language nav_link">en</a>
+                <a href="{{ url_site_de }}" data-language="de" class="language nav_link accent">de</a>
               {% endif %}
               </div>
 
