Path changed for youtube-icon

--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -23,7 +23,7 @@
               <img height="24" src="/images/layout/twitter-icon.svg">
             </a>
             <a href="https://www.youtube.com/channel/UCcEgzQvjtLp7UCdsXfuHbyQ" target="_blank" rel="noopener">
-              <img height="24" src="/images/layout/youtube-icon.svg">
+              <img height="24" src="/images/layout/YouTube-icon.png">
             </a>
           </div>
         </div>
