--- a/_sass/helpers/_animations.scss
+++ b/_sass/helpers/_animations.scss
@@ -29,6 +29,8 @@
     animation: none;
 }
 
+/* ===========================================
+
 .slidedown,
 .slideup {
     opacity: 0;
@@ -43,6 +45,8 @@
     opacity: 1;
     max-height: 50px;
 }
+
+   =========================================== */
 
 .fade-in {
     -webkit-animation-name: fadein;
