Updated more-news style

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -265,12 +265,12 @@ input[type=submit]{
 .more-news-button {
    text-align: right;
    margin-right: 15px;
+   margin-top: 15px;
 }
 
 .more-news-btn {
    padding: 9px 15px;
    background-color: #ce0071;
-   color: white;
    border: 0;
    line-height: inherit;
    text-decoration: none;
