Added about more style

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -276,3 +276,20 @@ input[type=submit]{
    text-decoration: none;
    border-radius: 0;
 }
+
+/* About more link */
+
+.about-more-button {
+   text-align: right;
+   margin-right: 15px;
+   margin-top: 15px;
+}
+
+.about-more-btn {
+   padding: 9px 15px;
+   background-color: #147ec5;
+   border: 0;
+   line-height: inherit;
+   text-decoration: none;
+   border-radius: 0;
+}
