Added about new sport style

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -293,3 +293,16 @@ input[type=submit]{
    text-decoration: none;
    border-radius: 0;
 }
+
+/* About new sport */
+
+.new_sport {
+   height: 120px;
+}
+
+.new_sport_text {
+   float: right;
+   max-width: 90%;
+}
+
+
