--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -176,7 +176,8 @@ input[type=submit]{
 .social_feed_section,
 .about_yog_1,
 .jobs,
-.sports {
+.sports,
+.heritage {
     background-color: $purple-primary;
     background-image: url('../images/layout/bkg_magenta.svg');
     background-position: 50% 50%;
