--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -203,6 +203,7 @@ input[type=submit]{
 .newsletter_cta,
 .jobs,
 .about_yog,
+.heritage,
 .sports,
 .facts,
 .key_numbers,
@@ -215,6 +216,7 @@ input[type=submit]{
 }
 
 .about_yog_1,
+.sites1,
 .jobs,
 .single-news-content,
 .latestnews_section,
@@ -226,6 +228,7 @@ input[type=submit]{
 /* Page about and venues */
 
 .about_yog,
+.heritage,
 .sports,
 .facts,
 .key_numbers,
