--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -71,6 +71,9 @@
           <a href="https://twitter.com/lausanne2020" target="_blank" rel="noopener">
             <img height="28" src="/images/layout/twitter-icon.svg">
           </a>
+          <a href="https://www.youtube.com/channel/UCcEgzQvjtLp7UCdsXfuHbyQ" target="_blank" rel="noopener">
+              <img height="28" src="/images/layout/YouTube-icon.png">
+            </a>
         </div>
       </div>
     </div>
