--- a/_sass/pages/_venues.scss
+++ b/_sass/pages/_venues.scss
@@ -46,13 +46,13 @@ html .hero-discover {
 }
 
 #box {
-    height: 50px;
-    line-height: 50px;
-    font-size: 16px;
-    color: #FFFFFF;
-    font-weight: 700;
-    text-align: center;
-    background: rgba(206, 0, 113, 0.78);
+    height: 50px !important;
+    line-height: 50px !important;
+    font-size: 16px !important;
+    color: #FFFFFF !important;
+    font-weight: 700 !important;
+    text-align: center !important;
+    background: rgba(206, 0, 113, 0.78) !important;
 }
 
 /* Sites square hover */
