--- a/_sass/pages/_venues.scss
+++ b/_sass/pages/_venues.scss
@@ -45,7 +45,7 @@ html .hero-discover {
     margin-top: 150px;
 }
 
-#box {
+.box {
     height: 50px !important;
     line-height: 50px !important;
     font-size: 16px !important;
@@ -59,7 +59,6 @@ html .hero-discover {
 
 .sqr {
     width: 100%;
-    margin-bottom: 20px;
     position: relative;
     float: left;
     background: #ececec;
