--- a/_sass/pages/_venues.scss
+++ b/_sass/pages/_venues.scss
@@ -52,7 +52,7 @@ html .hero-discover {
     color: #FFFFFF;
     font-weight: 700;
     text-align: center;
-    background-color: #ce0071;;
+    background-color: #ce0071;
     margin-top: 241px;
 }
 
