--- a/_sass/pages/_venues.scss
+++ b/_sass/pages/_venues.scss
@@ -62,7 +62,7 @@ html .hero-discover {
     width: 100%;
     position: relative;
     float: left;
-    background: #ececec;
+    background: #000000;
     overflow: hidden;
     box-sizing: border-box;
 }
