--- a/_sass/pages/_venues.scss
+++ b/_sass/pages/_venues.scss
@@ -54,6 +54,7 @@ html .hero-discover {
     text-align: center;
     background-color: #ce0071;
     margin-top: 241px;
+    margin-bottom: 50px;
 }
 
 /* Sites square hover */
