--- a/_sass/pages/_venues.scss
+++ b/_sass/pages/_venues.scss
@@ -45,7 +45,7 @@ html .hero-discover {
     margin-top: 150px;
 }
 
-.box {
+.textSite {
     height: 50px;
     line-height: 50px;
     font-size: 16px;
