--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -42,7 +42,7 @@ html .hero {
 
 .the_claim {
     position: absolute;
-    color: $blue-primary;
+    color: #FFFFFF;
     width: inherit;
     font-size: 81px;
     line-height: 90px;
