--- a/_sass/pages/_venues.scss
+++ b/_sass/pages/_venues.scss
@@ -54,8 +54,11 @@ html .hero-discover {
     text-align: center;
     background-color: #ce0071;
     margin-bottom: 50px;
-    @media (max-width: 991px) {
+    @media (max-width: 1201px) {
         font-size: 14px;
+    }
+    @media (min-width: 991px){
+        font-size: 16px;
     }
 }
 
