--- a/_sass/pages/_about.scss
+++ b/_sass/pages/_about.scss
@@ -55,8 +55,11 @@
         @include flex-wrap(wrap);
     }
     .himage1, .himage2, .himage3 {
-        float: none;
-        width: 80%;
+        float: none !important;
+        width: 80% !important;
+        margin-left: 0 !important;
+        margin-bottom: 20px;
+        text-align: center;
     }
 }
 
