--- a/_sass/pages/_about.scss
+++ b/_sass/pages/_about.scss
@@ -57,7 +57,8 @@
     .himage1, .himage2, .himage3 {
         float: none !important;
         width: 80% !important;
-        margin-left: 0 !important;
+        margin-left: auto !important;
+        margin-right: auto !important;
         margin-bottom: 20px;
         text-align: center;
     }
