--- a/_sass/pages/_about.scss
+++ b/_sass/pages/_about.scss
@@ -120,3 +120,11 @@
 .himage2, .himage3 {
     margin-left: 5%;
 }
+
+.himage4, .himage5 {
+    width:45%;
+    float:left;
+}
+.himage5 {
+    margin-left: 10%;
+}
