--- a/_sass/pages/_about.scss
+++ b/_sass/pages/_about.scss
@@ -54,7 +54,7 @@
     .facts-entities {
         @include flex-wrap(wrap);
     }
-    .himage1, .himage2, .himage3 {
+    .himage1, .himage2, .himage3, .himage4, .himage5 {
         float: none !important;
         width: 80% !important;
         margin-left: auto !important;
@@ -122,8 +122,11 @@
 }
 
 .himage4, .himage5 {
-    width:45%;
+    width:30%;
     float:left;
+}
+.himage4 {
+    margin-left: 15%;
 }
 .himage5 {
     margin-left: 10%;
