--- a/_sass/pages/_about.scss
+++ b/_sass/pages/_about.scss
@@ -112,19 +112,16 @@
 
 /* Heritage */
 
-.himage1, .himage2, .himage3 {
+.himage1, .himage2, .himage3, .himage4, .himage5 {
     width:30%;
     float:left;
+    margin-bottom: 30px;
 }
 
 .himage2, .himage3 {
     margin-left: 5%;
 }
 
-.himage4, .himage5 {
-    width:30%;
-    float:left;
-}
 .himage4 {
     margin-left: 15%;
 }
