--- a/_sass/pages/_about.scss
+++ b/_sass/pages/_about.scss
@@ -129,3 +129,23 @@
     margin-left: 10%;
     margin-right: 15%;
 }
+
+#hList {
+    margin-left: 5%;
+    float: left;
+    width: 40%;
+    margin-bottom: 30px;
+    display: inline-block;
+    min-height: 500px;
+    vertical-align: middle;
+}
+
+#hListImg {
+    float: left;
+    margin-left: 10%;
+    width: 35%;
+    height: 100%;
+    display: inline-block;
+    min-height: 500px;
+    vertical-align: middle;
+}
