--- a/_sass/pages/_about.scss
+++ b/_sass/pages/_about.scss
@@ -54,13 +54,12 @@
     .facts-entities {
         @include flex-wrap(wrap);
     }
-    .himage1, .himage2, .himage3, .himage4, .himage5 {
+    .himage1, .himage2, .himage3, .himage4, .himage5, #hList, #hListImg {
         float: none !important;
         width: 80% !important;
         margin-left: auto !important;
         margin-right: auto !important;
         margin-bottom: 20px;
-        text-align: center;
     }
 }
 
