--- a/_sass/pages/_about.scss
+++ b/_sass/pages/_about.scss
@@ -139,6 +139,8 @@
 #hListImg {
     float: left;
     margin-left: 10%;
-    width: 35%;
-    margin-top: 8%;
+    width: 40%;
+    margin-top: 10%;
+    margin-right: 5%;
+    min-height:500px;
 }
