--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -177,7 +177,9 @@ input[type=submit]{
 .about_yog_1,
 .jobs,
 .sports,
-.heritage {
+.heritage,
+.video_section,
+.about_yog_section {
     background-color: $purple-primary;
     background-image: url('../images/layout/bkg_magenta.svg');
     background-position: 50% 50%;
