--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -40,6 +40,14 @@ html .hero {
     }
 }
 
+.video_section {
+    text-align: center;
+}
+
+.home_video {
+    padding: 20px;
+}
+
 .the_claim {
     position: absolute;
     color: #FFFFFF;
