--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -42,10 +42,12 @@ html .hero {
 
 .video_section {
     text-align: center;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 
-.home_video {
-    padding: 20px;
+#text_video {
+    margin-bottom: 50px;
 }
 
 .the_claim {
