--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -50,6 +50,9 @@ html .hero {
     margin-bottom: 50px;
 }
 
+#more_video {
+    margin-top: 25px;
+}
 .the_claim {
     position: absolute;
     color: #FFFFFF;
