--- a/_sass/pages/_sports.scss
+++ b/_sass/pages/_sports.scss
@@ -30,3 +30,13 @@
 .about_the_yog_p.descr_pictos {
     text-align: center;
 }
+
+#skimo {
+    padding:3px;
+}
+
+#skimo_txt {
+    float: left;
+    position: relative;
+    left: 50%;
+}
