--- a/_sass/pages/_about.scss
+++ b/_sass/pages/_about.scss
@@ -115,7 +115,7 @@
 .himage1, .himage2, .himage3, .himage4, .himage5 {
     width:30%;
     float:left;
-    margin-bottom: 80px;
+    margin-bottom: 20px;
 }
 
 .himage2, .himage3 {
@@ -128,6 +128,10 @@
 .himage5 {
     margin-left: 10%;
     margin-right: 15%;
+}
+
+#about-text2 {
+    margin-bottom: 80px;
 }
 
 #hList {
