--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -1,10 +1,11 @@
 html .hero {
     background-image: url('../images/home/lausanne_overview4.jpg');
     background-size: cover;
-    @media (min-width: 1921px) {
+    height: 900px;
+    @media (max-width: 1921px) {
         height: 900px;
     } // Width of image
-    @media (min-width: 1651px) {
+    @media (max-width: 1651px) {
         height: 900px;
     }
     @media (max-width: 1450px) {
