--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,6 +7,9 @@
 {% if site.lang == "de" %}
   {% assign nav = site.data.nav-footer.de %}
 {% endif %}
+{% if site.lang == "it" %}
+  {% assign nav = site.data.nav-footer.it %}
+{% endif %}
 
 <div class="footer">
   <div class="container">
