--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -45,7 +45,7 @@
           </div>
           <div class="col-md-3 col-xs-6">
             <a href="{% t footer.link.buenos %}" target="_blank" rel="noopener">
-              <img height="80" src="/images/layout/Buenos_Aires_2018_logo.jpg">
+              <img height="80" src="/images/layout/BA.png">
             </a>
           </div>
           <div class="col-md-3 col-xs-6">
@@ -56,6 +56,16 @@
           <div class="col-md-3 col-xs-6">
             <a href="{% t footer.link.beijing %}" target="_blank" rel="noopener">
               <img height="80" src="/images/layout/Beijing_2022_emblem.jpg">
+            </a>
+          </div>
+          <div class="col-md-3 col-xs-6">
+            <a href="{% t footer.link.paris %}" target="_blank" rel="noopener">
+              <img height="80" src="/images/layout/Paris.jpg">
+            </a>
+          </div>
+          <div class="col-md-3 col-xs-6">
+            <a href="{% t footer.link.losAngeles %}" target="_blank" rel="noopener">
+              <img height="80" src="/images/layout/LA.png">
             </a>
           </div>
         </div>
