--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -45,7 +45,7 @@
           </div>
           <div class="col-md-3 col-xs-6">
             <a href="{% t footer.link.buenos %}" target="_blank" rel="noopener">
-              <img height="80" src="/images/layout/BA.png">
+              <img height="80" src="/images/home/BA.png">
             </a>
           </div>
           <div class="col-md-3 col-xs-6">
@@ -60,12 +60,12 @@
           </div>
           <div class="col-md-3 col-xs-6">
             <a href="{% t footer.link.paris %}" target="_blank" rel="noopener">
-              <img height="80" src="/images/layout/Paris.jpg">
+              <img height="80" src="/images/home/Paris.jpg">
             </a>
           </div>
           <div class="col-md-3 col-xs-6">
             <a href="{% t footer.link.losAngeles %}" target="_blank" rel="noopener">
-              <img height="80" src="/images/layout/LA.png">
+              <img height="80" src="/images/home/LA.png">
             </a>
           </div>
         </div>
