--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,32 +38,32 @@
       <div class="col-md-6 footer-pics">
         <div class="row">
 
-          <div class="col-md-3 col-xs-6">
+          <div class="col-md-3 col-xs-6" style="width: 15%;">
             <a href="{% t footer.link.pyeongChang %}" target="_blank" rel="noopener">
               <img height="80" src="/images/layout/2018_2.png">
             </a>
           </div>
-          <div class="col-md-3 col-xs-6">
+          <div class="col-md-3 col-xs-6" style="width: 15%;">
             <a href="{% t footer.link.buenos %}" target="_blank" rel="noopener">
               <img height="80" src="/images/home/BA.png">
             </a>
           </div>
-          <div class="col-md-3 col-xs-6">
+          <div class="col-md-3 col-xs-6" style="width: 15%;">
             <a href="{% t footer.link.tokyo %}" target="_blank" rel="noopener">
               <img height="80" src="/images/layout/2020_1.png">
             </a>
           </div>
-          <div class="col-md-3 col-xs-6">
+          <div class="col-md-3 col-xs-6" style="width: 15%;">
             <a href="{% t footer.link.beijing %}" target="_blank" rel="noopener">
               <img height="80" src="/images/layout/Beijing_2022_emblem.jpg">
             </a>
           </div>
-          <div class="col-md-3 col-xs-6">
+          <div class="col-md-3 col-xs-6" style="width: 15%;">
             <a href="{% t footer.link.paris %}" target="_blank" rel="noopener">
               <img height="80" src="/images/home/Paris.jpg">
             </a>
           </div>
-          <div class="col-md-3 col-xs-6">
+          <div class="col-md-3 col-xs-6" style="width: 15%;">
             <a href="{% t footer.link.losAngeles %}" target="_blank" rel="noopener">
               <img height="80" src="/images/home/LA.png">
             </a>
