--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,7 +35,7 @@
 <div class="botbar">
   <div class="container">
     <div class="row">
-      <div class="col-md-6 footer-pics">
+      <div class="col-md-6 footer-pics"  style="width: 70%;">
         <div class="row">
 
           <div class="col-md-3 col-xs-6" style="width: 15%;">
@@ -70,7 +70,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-6 footer-pics">
+      <div class="col-md-6 footer-pics"  style="width: 30%;">
         <div class="links_social">
           <a href="https://www.instagram.com/lausanne2020" target="_blank" rel="noopener">
             <img height="40" src="/images/layout/Instagram-logo.png">
