--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -1,5 +1,5 @@
 html .hero {
-    background-image: url('../images/home/lausanne_overview.jpg');
+    background-image: url('../images/home/Website_Cover.png');
     background-size: cover;
     height: 900px;
     @media (max-width: 1921px) {
