--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -185,10 +185,8 @@ html .hero {
 }
 .countdown #container {
     position: relative;
-    min-height: 200px;
-    max-height: 640px;
-    max-width: 640px;
-    min-width: 200px;
+    height: 640px;
+    width: 640px;
     width: 100%;
     height: 100%;
     opacity: 1;
