--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -185,8 +185,10 @@ html .hero {
 }
 .countdown #container {
     position: relative;
-    height: 640px;
-    width: 640px;
+    min-height: 640px;
+    max-height: 640px;
+    max-width: 640px;
+    min-width: 640px;
     width: 100%;
     height: 100%;
     opacity: 1;
