--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -183,6 +183,26 @@ html .hero {
     font-weight: normal;
     text-rendering: optimizeLegibility;
 }
+@font-face {
+    font-family: 'OmegaCT';
+    src: url('../fonts/omegact-regular-webfont.eot');
+    src: url('../fonts/omegact-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/omegact-regular-webfont.woff') format('woff'),
+         url('../fonts/omegact-regular-webfont.ttf') format('truetype'),
+         url('../fonts/omegact-regular-webfont.svg#omega_ctregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'OmegaCT';
+    src: url('../fonts/omegact-bold-webfont.eot');
+    src: url('../fonts/omegact-bold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/omegact-bold-webfont.woff') format('woff'),
+         url('../fonts/omegact-bold-webfont.ttf') format('truetype'),
+         url('../fonts/omegact-bold-webfont.svg#omega_ctbold') format('svg');
+    font-weight: bold;
+    font-style: normal;
+}
 .countdown #container {
     position: relative;
     min-height: 640px;
@@ -262,4 +282,163 @@ html .hero {
     background-color: rgba(0,0,0,0);
     position: absolute;
     display: block;
+}
+.countdown_container {
+	position: relative;
+	width: 180px;
+	max-width: 180px;
+	height: 165px;
+	border: 0 solid #9f9f9f;
+	background-color: white;
+	background-image: url(../img/bg.png);
+	background-repeat:no-repeat;
+	background-size: 100%;
+}
+.countdown_container:after {
+	padding-top: 88%;
+	display: block;
+	content: "";
+}
+.countdown_container .border {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 180px;
+	height: 165px;
+	border: 1px solid #9f9f9f;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+.countdown_container .logo {
+	position: absolute;
+	top: 23%;
+	left: 0px;
+	width: 100%;
+	text-align: center;
+}
+.countdown_container .logo img {
+	width: 60%;
+}
+
+.countdown_container a.omega_link {
+	display: block;
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	width: 100%;
+	height: 100%;
+	cursor: pointer;
+}
+.countdown_container .clock, .countdown {
+	display: none;
+	position: absolute;
+	left: 0;
+	text-align: center;
+}
+
+.countdown_container .cd_item {
+	font-family: "OmegaCT", Arial, sans-serif;
+	display: inline-block;
+	color: black;
+}
+
+.countdown_container #final-countdown { opacity: 0; }
+.current-time {
+	width: 100%;
+	position: absolute;
+	text-align: center;
+	font-weight: 800;
+	font-size: 30px;
+	top: 110px;
+	letter-spacing: 2px;
+	opacity: 0;
+}
+
+.countdown_container .countdown {
+	width: 100%;
+	top: 69%;
+}
+.countdown_container .countdown .cd_item {
+	width: 25%;
+	height: 45px;
+	background-image: url(../img/separator.png);
+	background-repeat: no-repeat;
+	background-position: right center;
+    background-size: contain;
+	margin-left: -5px;
+}
+
+.countdown_container .countdown .cd_item_last {
+	background-image: none;
+}
+
+.countdown_container .countdown .days {
+	width: 29%;
+}
+.countdown_container .countdown .hours {
+	width: 25%;
+}
+.countdown_container .countdown .cd_label {
+ 	font-weight: normal;
+	font-size: 12px;
+	text-align: center;
+	display: block;
+	margin: 3px 0 5px 0;
+}
+
+.countdown_container .cd_remain {
+	font-weight: bold;
+	font-size: 17px;
+	display: block;
+	text-align: center;
+}
+
+.countdown_container .countdown p {
+	text-transform: uppercase;
+	font-weight: bold;
+	margin: 2px 0 0 0;
+	font-family: "OmegaCT", Arial, sans-serif;
+	color: #be072f;
+	font-size: 16px;
+	text-align: center;
+}
+.countdown_container .countdown img {
+	display: block;
+	margin: 0 auto;
+}
+
+/* clock specifics */
+.countdown_container .clock {
+	position: absolute;
+	bottom: 15%;
+	text-align: center;
+	width: 100%;
+	font-size: 30px;
+	top: 110px;
+}
+
+.countdown_container .clock .cd_item {
+	display: inline-block;
+	color: black;
+	width: 13%;
+	width: auto;
+	font-weight: bold;
+	text-align: center;
+}
+.countdown_container .clock .inter {
+	display: inline-block;
+	font-weight: bold;
+	width: 4%;
+	width: auto;
+	margin: 0 -5px;
+	color: black;
+	padding-top: 0px;
+	text-align: center;
+}
+
+
+.countdown_container img.retina {
+	display: none;
 }
