--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -179,7 +179,8 @@ input[type=submit]{
 .sports,
 .heritage,
 .shop_section,
-.about_yog_section {
+.about_yog_section,
+#sites2 {
     background-color: $purple-primary;
     background-image: url('../images/layout/bkg_magenta.svg');
     background-position: 50% 50%;
