--- a/_sass/pages/_venues.scss
+++ b/_sass/pages/_venues.scss
@@ -171,3 +171,9 @@ html .hero-discover {
 .gm-style {
     font-family: Montserrat, sans-serif !important;
 }
+
+.venues_img {
+    width: 60%;
+    margin: auto;
+    margin-bottom: 40px;
+}
