--- a/_sass/pages/_venues.scss
+++ b/_sass/pages/_venues.scss
@@ -173,7 +173,8 @@ html .hero-discover {
 }
 
 .venues_img {
-    width: 60%;
+    width: 100%;
+    max-width: 550px;
     margin: auto;
     margin-bottom: 40px;
 }
