--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -31,6 +31,12 @@
         <a class="nav-brand" href="{{nav[0].path}}">
           <img class="logo" src="/images/layout/logo-LS2020-YOG-DNA_235.png" width="235" />
         </a>
+      
+        <div class="omega_countdown">
+          <a class="omega_link" href="">
+            <img class="omega_img" src="/images/home/countdown.png" />
+          </a>
+        </div>
 
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-navbar">
