--- a/_sass/layout/_nav.scss
+++ b/_sass/layout/_nav.scss
@@ -131,3 +131,8 @@
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-duration: 0.3s;
 }
+
+/* Omega countdown */
+.omega_countdown {
+    padding-left:280px;
+}
