--- a/_sass/layout/_nav.scss
+++ b/_sass/layout/_nav.scss
@@ -63,6 +63,9 @@
             padding: 0;
         }
     }
+    .navbar-collapse collapse in {
+        max-height: 380px;
+    }
 }
 
 @media(min-width:768px) {
