--- a/_sass/layout/_nav.scss
+++ b/_sass/layout/_nav.scss
@@ -63,7 +63,7 @@
             padding: 0;
         }
     }
-    .navbar-collapse collapse in {
+    .navbar-collapse.collapse.in {
         max-height: 380px;
     }
 }
