--- a/_sass/layout/_nav.scss
+++ b/_sass/layout/_nav.scss
@@ -83,7 +83,7 @@
 @media(max-width:767px) {
     .nav-brand .logo {
         margin: 30px 0 0 30px;
-        width: 250px;
+        width: 150px;
     }
     .navbar-header {
         padding: 10px 0;
@@ -116,6 +116,10 @@
         visibility: hidden;
         position: absolute;
     }
+    .omega_countdown 
+        margin: 30px 0 0 200px;
+        width:150px;
+    }
     
 }
 /* Line slider */
@@ -136,18 +140,4 @@
     transform: scale3d(1, 1, 1);
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-duration: 0.3s;
-}
-
-/* Omega countdown */
-.omega_countdown {
-    padding-left:280px;
-}
-@media(max-width:767px) {
-   .omega_countdown {
-        padding-left:0px;
-        padding-top:20px;
-    }
-    .omega_img {
-        width:150px;
-    }
 }
