--- a/_sass/layout/_nav.scss
+++ b/_sass/layout/_nav.scss
@@ -116,7 +116,7 @@
         visibility: hidden;
         position: absolute;
     }
-    .omega_countdown 
+    .omega_countdown {
         margin: 30px 0 0 200px;
         width:150px;
     }
