--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -39,6 +39,24 @@
         </div>
 
         <div class="navbar-header">
+            <div class="row socials slidedown">
+              <div class="col-md-6 col-md-offset-6 header-pics navbar-right">
+                <div class="links_social">
+                  <a href="https://www.instagram.com/lausanne2020" target="_blank" rel="noopener">
+                    <img height="30" src="/images/layout/Instagram-logo.png">
+                  </a>
+                  <a href="https://www.facebook.com/lausanne2020/" target="_blank" rel="noopener">
+                    <img height="30" src="/images/layout/facebook-icon.png">
+                  </a>
+                  <a href="https://twitter.com/lausanne2020" target="_blank" rel="noopener">
+                    <img height="24" src="/images/layout/twitter-icon.svg">
+                  </a>
+                  <a href="https://www.youtube.com/channel/UCcEgzQvjtLp7UCdsXfuHbyQ" target="_blank" rel="noopener">
+                    <img height="24" src="/images/layout/YouTube-icon.png">
+                  </a>
+                </div>
+              </div>
+            </div>
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-navbar">
                 <span class="sr-only">Toggle navigation</span><div class="icon-nav"></div><i class="fa fa-bars"></i>
             </button>
